# flatc-rust

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/tutorial/: Cargo.toml  README.md  build.rs
examples/tutorial/flatbuffers/: monster.fbs
examples/tutorial/src/: main.rs
src/: lib.rs
