[package]
name = "flatc-rust"
version = "0.1.3-alpha.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/frol/flatc-rust"
repository = "https://github.com/frol/flatc-rust"
description = "FlatBuffers flatc command as API"
documentation = "https://docs.rs/flatc-rust/*/flatc-rust"
readme = "README.md"
keywords = ["flatbuffers", "flatc", "compiler", "code-generation"]
categories = ["development-tools::build-utils", "development-tools", "api-bindings", "parser-implementations"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/README.md"]

[badges]
travis-ci = { repository = "frol/flatc-rust" }

[dependencies]
log = ">=0.4.4"

[dev-dependencies]
tempfile = "3.0.5"
